# cloudgripper-wm

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
cloudgripper_wm/: world.py
cloudgripper_wm/camera_params/cam-to-robot-points/: camera-to-robot-cr23.yaml
cloudgripper_wm/configs/: collect.yaml  train.yaml
cloudgripper_wm/envs/: __init__.py  cloudgripper_env.py  constants.py  robot_pool.py  safe_cloudgripper_wrapper.py
cloudgripper_wm/policies/: __init__.py  geometric_trajectory_policy.py  heuristic_grasp.py  no_grip_random_policy.py  random_push.py  sticky_random_policy.py  warmup_random_policy.py
cloudgripper_wm/tasks/: __init__.py  base.py  cube_push.py  cube_stack.py  rope_manip.py
cloudgripper_wm/utils/: cloudgripper_image_processor.py  coordinate_converter.py  get_finger_pos.py  occupancy.py  occupancy_viz.py
scripts/: collect.py  test_connection,py  test_real_robot.py  train.py
scripts/data/: collect_cloudgripper.py  extract_episode.py  inspect_data.py  slice_episodes.py
scripts/data/config/: cloudgripper.yaml  cloudgripper_geometric.yaml  cloudgripper_safe_nogrip.yaml  cloudgripper_sticky.yaml
scripts/debug/: eval_decode.py  eval_decoder.sh  eval_mse_curve.py  gripper_collision_sim.py  object_segmentation.py  occupancy_demo.py  plot_mse_curves.py  reset_objects.py  safety_sim.py  teleop.py  teleop_safe.py  test_connection.py  visualize_prediction.py
scripts/debug/config/: eval_decode.yaml  (+1 more)
scripts/plan/: eval_wm.py
scripts/train/: lewm.py  prejepa.py  train.py  train_decoder.py
tests/: check_dependencies.py
(+10 files in other folders)
