[project]
name = "cloudgripper-wm"
version = "0.1.0"
description = "World Models on CloudGripper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "stable-worldmodel[env,train]",
]

[tool.uv.sources]
stable-worldmodel = { path = "third_party/stable-worldmodel", editable = true }
