[project]
name = "cloudgripper-wm"
version = "0.1.0"
description = "World Models on CloudGripper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudgripper-api",
    "datasets>=4.8.5",
    "genesis",
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pybase64>=1.4.3",
    "requests>=2.34.2",
    "scikit-learn>=1.7.2",
    "stable-worldmodel[env,train]",
    "websocket-client>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
cloudgripper-api = { path = "third_party/cloudgripper-api", editable = true }
genesis = { path = "third_party/genesis_world", editable = true }
stable-worldmodel = { path = "third_party/stable-worldmodel", editable = true }
